# Copyright 2023 The IREE Authors
#
# Licensed under the Apache License v2.0 with LLVM Exceptions.
# See https://llvm.org/LICENSE.txt for license information.
# SPDX-License-Identifier: Apache-2.0 WITH LLVM-exception

load("//build_tools/bazel:build_defs.oss.bzl", "iree_compiler_register_plugin", "iree_gentbl_cc_library", "iree_tablegen_doc", "iree_td_library")

package(
    default_visibility = ["//visibility:public"],
    features = ["layering_check"],
    licenses = ["notice"],  # Apache 2.0
)

cc_library(
    name = "defs",
    includes = ["src"],
)

cc_library(
    name = "registration",
    srcs = [
        "src/PluginRegistration.cpp",
    ],
    deps = [
        ":Conversion",
        ":IR",
        ":Transforms",
        ":defs",
        "//compiler/src/iree/compiler/PluginAPI",
        "@llvm-project//mlir:IR",
    ],
)

iree_compiler_register_plugin(
    plugin_id = "xnnpack",
    target = ":registration",
)

iree_td_library(
    name = "td_files",
    srcs = [
        "src/xnnpack/Conversion/Passes.td",
        "src/xnnpack/IR/XnnpackOps.td",
        "src/xnnpack/Transforms/Passes.td",
    ],
    deps = [
        "@llvm-project//mlir:ControlFlowInterfacesTdFiles",
        "@llvm-project//mlir:FuncTdFiles",
        "@llvm-project//mlir:InferTypeOpInterfaceTdFiles",
        "@llvm-project//mlir:OpBaseTdFiles",
        "@llvm-project//mlir:SideEffectInterfacesTdFiles",
        "@llvm-project//mlir:ViewLikeInterfaceTdFiles",
    ],
)

cc_library(
    name = "IR",
    srcs = [
        "src/xnnpack/IR/XnnpackDialect.cpp",
        "src/xnnpack/IR/XnnpackOps.cpp",
        "src/xnnpack/IR/XnnpackOps.cpp.inc",
    ],
    hdrs = [
        "src/xnnpack/IR/XnnpackDialect.h",
        "src/xnnpack/IR/XnnpackOps.h",
        "src/xnnpack/IR/XnnpackOps.h.inc",
    ],
    deps = [
        ":XnnpackOpsGen",
        ":defs",
        "@llvm-project//mlir:IR",
    ],
)

iree_gentbl_cc_library(
    name = "XnnpackOpsGen",
    tbl_outs = [
        (
            ["--gen-dialect-decls"],
            "src/xnnpack/IR/XnnpackDialect.h.inc",
        ),
        (
            ["--gen-dialect-defs"],
            "src/xnnpack/IR/XnnpackDialect.cpp.inc",
        ),
        (
            ["--gen-op-decls"],
            "src/xnnpack/IR/XnnpackOps.h.inc",
        ),
        (
            ["--gen-op-defs"],
            "src/xnnpack/IR/XnnpackOps.cpp.inc",
        ),
    ],
    tblgen = "@llvm-project//mlir:mlir-tblgen",
    td_file = "src/xnnpack/IR/XnnpackOps.td",
    deps = [":td_files"],
)

cc_library(
    name = "Transforms",
    srcs = [
        "src/xnnpack/Transforms/LegalizeXnnpack.cpp",
        "src/xnnpack/Transforms/Passes.cpp",
    ],
    hdrs = [
        "src/xnnpack/Transforms/Passes.h",
        "src/xnnpack/Transforms/Passes.h.inc",
    ],
    deps = [
        ":IR",
        ":TransformsPassesIncGen",
        ":defs",
        "//compiler/src/iree/compiler/Codegen/Dialect/Codegen/IR:IREECodegenDialect",
        "//compiler/src/iree/compiler/Dialect/Flow/IR",
        "@llvm-project//mlir:Dialect",
        "@llvm-project//mlir:IR",
    ],
)

cc_library(
    name = "Conversion",
    srcs = [
        "src/xnnpack/Conversion/Passes.cpp",
        "src/xnnpack/Conversion/StablehloToXnnpack.cpp",
    ],
    hdrs = [
        "src/xnnpack/Conversion/Passes.h",
        "src/xnnpack/Conversion/Passes.h.inc",
    ],
    deps = [
        ":ConversionPassesIncGen",
        ":IR",
        ":defs",
        "@llvm-project//llvm:Support",
        "@llvm-project//mlir:IR",
        "@llvm-project//mlir:PDLInterpDialect",
        "@llvm-project//mlir:Parser",
        "@llvm-project//mlir:Pass",
        "@llvm-project//mlir:Support",
        "@llvm-project//mlir:Transforms",
        "@stablehlo//:stablehlo_ops",
    ],
)

iree_gentbl_cc_library(
    name = "TransformsPassesIncGen",
    tbl_outs = [
        (
            ["--gen-pass-decls"],
            "src/xnnpack/Transforms/Passes.h.inc",
        ),
    ],
    tblgen = "@llvm-project//mlir:mlir-tblgen",
    td_file = "src/xnnpack/Transforms/Passes.td",
    deps = [
        ":td_files",
        "@llvm-project//mlir:PassBaseTdFiles",
    ],
)

iree_gentbl_cc_library(
    name = "ConversionPassesIncGen",
    tbl_outs = [
        (
            ["--gen-pass-decls"],
            "src/xnnpack/Conversion/Passes.h.inc",
        ),
    ],
    tblgen = "@llvm-project//mlir:mlir-tblgen",
    td_file = "src/xnnpack/Conversion/Passes.td",
    deps = [
        ":td_files",
        "@llvm-project//mlir:PassBaseTdFiles",
    ],
)

iree_tablegen_doc(
    name = "XnnpackDialectDocGen",
    tbl_outs = [
        (
            [
                "--gen-dialect-doc",
                "-dialect=xnnpack",
            ],
            "src/xnnpack/IR/XnnpackDialect.md",
        ),
    ],
    tblgen = "@llvm-project//mlir:mlir-tblgen",
    td_file = "src/xnnpack/IR/XnnpackOps.td",
    deps = [":td_files"],
)
