# Copyright 2023 The IREE Authors
#
# Licensed under the Apache License v2.0 with LLVM Exceptions.
# See https://llvm.org/LICENSE.txt for license information.
# SPDX-License-Identifier: Apache-2.0 WITH LLVM-exception

load("//build_tools/bazel:iree_lit_test.bzl", "iree_lit_test_suite")
load("//build_tools/bazel:enforce_glob.bzl", "enforce_glob")

package(
    features = ["layering_check"],
    licenses = ["notice"],  # Apache 2.0
)

iree_lit_test_suite(
    name = "lit",
    srcs = enforce_glob(
        [
            "mul2-1d-e2e.mlir",
            "batch-matrix-multiply-e2e.mlir",
            "stablehlo-to-xnnpack.mlir",
            "stablehlo-to-xnnpack-using-pdll.mlir",
            "xnnpack-legalize.mlir",
        ],
        include = ["*.mlir"],
    ),
    cfg = "//samples:lit.cfg.py",
    tools = [
        "//tools:iree-compile",
        "//tools:iree-opt",
        "//tools:iree-run-module",
        "@llvm-project//llvm:FileCheck",
        "@llvm-project//mlir:mlir-opt",
        "@llvm-project//mlir:mlir-pdll",
    ],
)
